# open-chat

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TELEMETRY_SETUP.md  build.js  dmg-background.html  forge.config.js  index.html  model-capabilities.js  package-lock.json  package.json  plan.md  pnpm-lock.yaml  quick-chat.html  stats.html  tailwind.config.js  test-fuzzy-matching-implementation.js  test-fuzzy-matching.js  test-openrouter-models.js  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts
.claude/: settings.local.json
.cursor/rules/: setup.mdc
.github/workflows/: main.yml
dist-react/: index.html
dist-react/assets/: index-BXV5Ealm.js  index-DCR4Sndz.js  index-DVk0nADE.css  index-DYqJ_dUF.css
docs/: README.md  changelog.md  data-contracts.md  debugging-telemetry.md  development-workflow.md  faq-footguns.md  glossary.md  module-map.md  onboarding.md
docs/adr/: 001-electron-architecture.md  002-state-management.md
docs/entry-points/: build-system.md  main-process.md  react-frontend.md
docs/examples/: basic-conversation.js  streaming-llm.js
electron/: LICENSE  build.js  package.json  tailwind.config.mjs
electron/docs/: debugging-telemetry.md  faq-footguns.md  onboarding.md  where-to-look-when.md
src/: App.css  App.tsx  QuickChatApp.tsx  index.css  quick-chat.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  ollama.rs  search.rs  system_info.rs
src/assets/: spinner.json
tasks/: 01-ollama-detection.md  02-model-discovery.md  03-system-validation.md  04-ollama-api-integration.md  05-model-capabilities.md  06-provider-system-update.md  07-local-provider-ui.md  08-chat-integration.md  09-error-handling.md  10-testing-validation.md  CLAUDE.md
(+140 files in other folders)
